updated text to free range

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <i class="fa fa-motorcycle"></i>
                     <h2>Food Delivery</h2>
                     <p>
-                        Introducing our new food delivery service! Enjoy hot and delicious pizzas delivered straight to your doorstep. 
+                        Introducing our old food delivery service! Enjoy cold and delicious pizzas delivered straight to your doorstep. 
                         Order now and indulge in a mouthwatering experience from our pizza shop.
                     </p>
                 </div>
