--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img src="photos/background3.jpg" alt="pizza" class="cover_page_background">
             <nav class="text-overlay">
                 <h1>About <span>US</span></h1>
-                <p>"Deliciously crafted slices, delivering pizza perfection straight to your taste buds."</p>
+                <p>"Deliciously crafted slices, delivering pizza perfection straight to your taste buds blah blah."</p>
             </nav>
         </div>
     </section>
